hard-gists/a027a9fc5aac66e6a382/run.log
=== Docker Run Log for a027a9fc5aac66e6a382 ===
Started at: Mi 29. Okt 18:50:06 CET 2025

[2025-10-29 18:50:06] START: Running container for a027a9fc5aac66e6a382
[2025-10-29 18:50:06] SUCCESS: Container d2b8a69f903b5ad458186ee43187112fcdb0a9225c4eb7257ad270df71551aba started for a027a9fc5aac66e6a382
=== Container logs for a027a9fc5aac66e6a382 ===
  File "/snippet.py", line 61
    print "Failed to connect"
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a027a9fc5aac66e6a382 ===
[2025-10-29 18:50:09] INFO: Container d2b8a69f903b5ad458186ee43187112fcdb0a9225c4eb7257ad270df71551aba has stopped
